# stamba

./: Cargo.toml
.github/workflows/: release.yml
data/: example.txt
src/: app.rs  events.rs  main.rs  page.rs
src/page/: game.rs  home.rs
