[package]
name = "stamba"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Practice typing in your terminal."
homepage =  "https://github.com/nodech/stamba"
repository = "https://github.com/nodech/stamba"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["crossterm", "unstable-rendered-line-info"] }
